qt6/gen_qdrag.h

class QDrag;
class QEvent;
class QMetaObject;
class QMimeData;
class QObject;
class QPixmap;
class QPoint;
typedef struct QChildEvent QChildEvent;
typedef struct QDrag QDrag;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QObject QObject;
typedef struct QPixmap QPixmap;
typedef struct QPoint QPoint;
typedef struct QTimerEvent QTimerEvent;
QDrag* QDrag_new(QObject* dragSource);
QMetaObject* QDrag_metaObject(const QDrag* self);
void* QDrag_metacast(QDrag* self, const char* param1);
int QDrag_metacall(QDrag* self, int param1, int param2, void** param3);
struct miqt_string QDrag_tr(const char* s);
void QDrag_setMimeData(QDrag* self, QMimeData* data);
QMimeData* QDrag_mimeData(const QDrag* self);
void QDrag_setPixmap(QDrag* self, QPixmap* pixmap);
QPixmap* QDrag_pixmap(const QDrag* self);
void QDrag_setHotSpot(QDrag* self, QPoint* hotspot);
QPoint* QDrag_hotSpot(const QDrag* self);
QObject* QDrag_source(const QDrag* self);
QObject* QDrag_target(const QDrag* self);
int QDrag_exec(QDrag* self);
int QDrag_exec2(QDrag* self, int supportedActions, int defaultAction);
void QDrag_setDragCursor(QDrag* self, QPixmap* cursor, int action);
QPixmap* QDrag_dragCursor(const QDrag* self, int action);
int QDrag_supportedActions(const QDrag* self);
int QDrag_defaultAction(const QDrag* self);
void QDrag_cancel();
void QDrag_actionChanged(QDrag* self, int action);
void QDrag_connect_actionChanged(QDrag* self, intptr_t slot);
void QDrag_targetChanged(QDrag* self, QObject* newTarget);
void QDrag_connect_targetChanged(QDrag* self, intptr_t slot);
struct miqt_string QDrag_tr2(const char* s, const char* c);
struct miqt_string QDrag_tr3(const char* s, const char* c, int n);
int QDrag_exec1(QDrag* self, int supportedActions);
bool QDrag_override_virtual_metacall(void* self, intptr_t slot);
int QDrag_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QDrag_override_virtual_event(void* self, intptr_t slot);
bool QDrag_virtualbase_event(void* self, QEvent* event);
bool QDrag_override_virtual_eventFilter(void* self, intptr_t slot);
bool QDrag_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QDrag_override_virtual_timerEvent(void* self, intptr_t slot);
void QDrag_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QDrag_override_virtual_childEvent(void* self, intptr_t slot);
void QDrag_virtualbase_childEvent(void* self, QChildEvent* event);
bool QDrag_override_virtual_customEvent(void* self, intptr_t slot);
void QDrag_virtualbase_customEvent(void* self, QEvent* event);
bool QDrag_override_virtual_connectNotify(void* self, intptr_t slot);
void QDrag_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QDrag_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QDrag_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QDrag_delete(QDrag* self);